--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
     <title>Recipe</title>
 </head>
 <body>
-    
+    <!-- Cómo hacer lentejas guisadas
+Dificultad: Fácil
+Tiempo total
+1 h 15 m
+Elaboración
+15 m
+Cocción
+1 h
+Picamos en trozos menudos el ajo, la cebolla, la zanahoria, el pimiento verde y el puerro. Calentamos un poco de aceite de oliva en una cacerola, añadimos las verduras y sofreímos a fuego bajo durante cinco minutos. Sazonamos ligeramente, agregamos la salsa de tomate y cocer tres minutos más.
+-->
 </body>
 </html>
